tests/ui/feature-gates/feature-gate-concat_idents2.stderr
error[E0658]: use of unstable library feature 'concat_idents': `concat_idents` is not stable enough for use and is subject to change
  --> $DIR/feature-gate-concat_idents2.rs:2:5
   |
LL |     concat_idents!(a, b);
   |     ^^^^^^^^^^^^^
   |
   = note: see issue #29599 <https://github.com/rust-lang/rust/issues/29599> for more information
   = help: add `#![feature(concat_idents)]` to the crate attributes to enable

error[E0425]: cannot find value `ab` in this scope
  --> $DIR/feature-gate-concat_idents2.rs:2:5
   |
LL |     concat_idents!(a, b);
   |     ^^^^^^^^^^^^^^^^^^^^ not found in this scope
   |
   = note: this error originates in the macro `concat_idents` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0425, E0658.
For more information about an error, try `rustc --explain E0425`.
